tests/snapshots/execution_spec__test-null-expr.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  hello: Int @expr
}
