tests/snapshots/execution_spec__test-null-in-array.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Company {
  id: ID
  name: String
}

scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  hi(id: ID!): [Company]
}

scalar Url

schema {
  query: Query
}
