tests/snapshots/execution_spec__test-null-in-array.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Company {
  id: ID
  name: String
}

type Query {
  hi(id: ID!): [Company] @http(baseURL: "http://localhost:3000", path: "/hi")
}
