tests/snapshots/execution_spec__test-null-in-object.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "hi": {
        "name": null,
        "id": null
      }
    }
  }
}
