tests/snapshots/execution_spec__test-omit-list.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type B {
  c: String
}

scalar Email

type Query {
  foo: B
}

schema {
  query: Query
}
