tests/snapshots/execution_spec__test-params-as-body.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  firstUser(id: Int, name: String): User
}

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
